0040 - 0138 Continued with fixing issue ES#1332 in Roaster portal (0.97) 0938 - 0945 Checked emails and teams messages (0.12) 0945 - 1011 Added animation effects for search bar (0.43) 1011 - 1021 Moved animations related scss to separate files (0.17) 1021 - 1026 Discussion with Arun regarding the removing the cookie using JS; refer it on internet resources; The scenario was created in the local development environment for testing (0.08) 1026 - 1039 Created a chat search instance for grouping all chat search-related functionalities (0.22) 1039 - 1112 Integrated chat search instance with the application (0.55) 1112 - 1125 Added escape button closing for the chat search box (0.22) 1125 - 1215 Added chat search handler and debounced trigger (0.83) 1430 - 1530 Update lang detection functions; split it into #2 functions for both batch and single message handing (1) 1530 - 1605 Continued with working on language detection; fixed reference issue of messages (0.58) 1605 - 1632 Updated user details and online status response handler; now the online status is more realtime (0.45) 1632 - 1732 Improved behaviour of clear chat/delete chat/ block user functionalities (1) 1732 - 1812 Continue with improving the behaviour of context menu item added different behaviour for both expand and collapse mode (0.67) 1812 - 1912 Re-write message history processing for enabling lazy loading; it will improve performance and save hits on google API (1) 1912 - 1918 Continued with re-writing message history processing (0.1) 2240 - 2318 Incoming message handling changes and checking the implementation (0.63) 2318 - 2359 Implemented chatListScrollListener to keep scroll same position when new message appended (0.68)

--- a/src/app/shared/components/chat/sewn-direct-message/sewn-direct-message.component.scss
+++ b/src/app/shared/components/chat/sewn-direct-message/sewn-direct-message.component.scss
@@ -1,3 +1,4 @@
+@use 'animations';
 :root {
     font-family: 'Muli', sans-serif;
     font-stretch: normal;
@@ -1599,6 +1600,7 @@
         padding: 5px;
         box-shadow: 0 0 14px 0 #0003;
         border: solid 0.2px #ebebeb;
+        border-radius: 5px;
         .dm-hcm-panel-arrow {
             display: inline-block;
             height: 16px;
@@ -1645,20 +1647,54 @@
         }
     }
     .dm-csb-box {
+        position: relative;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         padding: 8px;
+        flex-wrap: wrap;
         .dm-csb-seach-icon {
+            position: relative;
             display: block;
-            width: 32px;
-            height: 32px;
+            width: 24px;
+            height: 24px;
             cursor: pointer;
         }
         .dm-csb-seach-input {
+            position: relative;
+            display: block;
             flex: 1;
             outline: none;
             border: none;
+        }
+        .dm-csb-seach-controls {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .dm-csb-result-count {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-right: 8px;
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 1.43;
+                letter-spacing: normal;
+                text-align: left;
+                color: #747588;
+                .dm-csb-result-count-block {
+                    margin-right: 8px;
+                }
+            }
+            .dm-csb-control-icon {
+                position: relative;
+                display: block;
+                margin-right: 8px;
+                cursor: pointer;
+                width: 24px;
+                height: 24px;
+            }
         }
     }
 }
@@ -1719,65 +1755,11 @@
     }
 }
 
-.fade-in {
-    -webkit-animation: fade-in 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: fade-in 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-.fade-in-right {
-    -webkit-animation: fade-in-right 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: fade-in-right 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-@-webkit-keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fade-in-right {
-    0% {
-        -webkit-transform: translateX(50px);
-        transform: translateX(50px);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes fade-in-right {
-    0% {
-        -webkit-transform: translateX(50px);
-        transform: translateX(50px);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes getWidth {
-    100% {
-        width: 100%;
-    }
-}
-
 .dialog-image {
     width: 32px;
     height: 32px;
 }
+
 :host {
     ::ng-deep .p-dialog {
         max-width: 400px;
